<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent" tools:context=".NewComplaintActivity">

  <android.support.design.widget.TextInputLayout
      android:id="@+id/complaint_code"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/title"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginRight="16dp"
      android:layout_marginBottom="16dp">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/el_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/code_hint"
        android:maxLength="32" />

  </android.support.design.widget.TextInputLayout>

  <TextView
      android:id="@+id/title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="32dp"
      android:layout_marginLeft="32dp"
      android:layout_marginTop="32dp"
      android:layout_marginEnd="32dp"
      android:layout_marginRight="32dp"
      android:layout_marginBottom="32dp"
      android:text="@string/new_complaint"
      android:textSize="24sp"
      tools:layout_editor_absoluteX="0dp"
      tools:layout_editor_absoluteY="58dp" />

  <android.support.design.widget.TextInputLayout
      android:id="@+id/complaint_title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/title"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="16dp"
      android:layout_marginRight="16dp"
      android:layout_marginBottom="16dp">

  </android.support.design.widget.TextInputLayout>


  <android.support.design.widget.TextInputLayout
      android:id="@+id/complaint_description"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/title"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="85dp"
      android:layout_marginEnd="16dp"
      android:layout_marginRight="16dp"
      android:layout_marginBottom="16dp">

    <android.support.design.widget.TextInputEditText
        android:id="@+id/el_description"
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:hint="@string/description_hint"
        android:maxLength="255" />

  </android.support.design.widget.TextInputLayout>


  <TextView android:id="@+id/selector_value" android:layout_marginTop="32dp" android:layout_width="wrap_content" android:layout_height="wrap_content"  android:textSize="36sp" android:layout_centerInParent="true" />

  <android.support.design.button.MaterialButton
      android:id="@+id/btn_date"
      android:layout_width="160dp"
      android:layout_height="wrap_content"
      android:layout_below="@id/selector_value"
      android:layout_alignParentEnd="true"
      android:layout_alignParentRight="true"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="-89dp"
      android:layout_marginEnd="235dp"
      android:layout_marginRight="235dp"
      android:layout_marginBottom="16dp"
      android:text="@string/btn_add_date_hint" />

  <android.support.design.button.MaterialButton
      android:id="@+id/btn_add"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@id/selector_value"
      android:layout_alignParentEnd="true"
      android:layout_alignParentRight="true"
      android:layout_marginStart="16dp"
      android:layout_marginLeft="16dp"
      android:layout_marginTop="0dp"
      android:layout_marginEnd="16dp"
      android:layout_marginRight="16dp"
      android:layout_marginBottom="16dp"
      android:text="@string/btn_add_hint" />


</RelativeLayout>
